Align the items in issues.

--- a/src/components/issue/Issue.scss
+++ b/src/components/issue/Issue.scss
@@ -22,8 +22,8 @@
     color: $bg-gray-1;
   }
   &__span {
-    height: 1rem;
-    width: 1rem;
+    height: 0.9rem;
+    width: 0.9rem;
     border-radius: 0.125rem;
     color: #fff;
     font-size: 0.7rem;
@@ -55,15 +55,32 @@
     padding: 0.5rem 0.5rem;
     border: 0.0625rem solid $bg-gray-3;
     cursor: pointer;
+    &:hover{
+        background-color: rgba($color: $text-secondary, $alpha: 0.1);
+    }
   }
   &__div {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    width: 25%;
+    &:first-child{
+        width:50%;
+        gap: 0.5rem;
+    }
+    &:nth-child(2){
+        width: 10%;
+    }
+    &:nth-child(3){
+        width: 30%;
+    }
+    &:last-child{
+       width: 10%;
+    }
   }
   &__summary {
     font-family: "LouisGeorgeCafe", sans-serif;
-    font-weight: 600;
+    font-weight: 400;
+    font-size: 0.9rem;
   }
   &__item {
     display: flex;
